Minor changes based on PR feedback